Update webapp to work with latest changes to aerogear.js

--- a/src/main/webapp/websocket.html
+++ b/src/main/webapp/websocket.html
@@ -5,12 +5,12 @@
         <title>Web Socket Example</title>
         <link rel="stylesheet" href="css/socket.css">
         <script src='http://code.jquery.com/jquery-1.9.1.min.js'></script>
-        <!-- Config for AeroGear.SimplePush -->
+        <script src='http://cdn.sockjs.org/sockjs-0.3.min.js'></script>
+        <!-- Config for AeroGear.SimplePush and AeroGear.UnifiedPush -->
         <script>
         var AeroGearSimplePush = {
-                pushAppID: "8e976eab-b628-46e5-8790-13f70289af37",
-                variantID: "85a23d1c-3610-4ea8-966a-34f46422637f"
-            };
+            variantID: "c659d6c9-7ddb-47ca-9958-105370c4b443"
+        };
         </script>
         <script src="js/aerogear.custom.js"></script>
     </head>
