Update to latest version of aerogear.js which removes tie between UPS and SPS and update webapp to use new features

--- a/src/main/webapp/websocket.html
+++ b/src/main/webapp/websocket.html
@@ -9,7 +9,8 @@
         <!-- Config for AeroGear.SimplePush and AeroGear.UnifiedPush -->
         <script>
         var AeroGearSimplePush = {
-            variantID: "c659d6c9-7ddb-47ca-9958-105370c4b443"
+            simplePushServerURL: "http://spsvertx-aerogearkb.rhcloud.com/simplepush",
+            variantID: "978960e1-8584-4493-8848-870c4298982a"
         };
         </script>
         <script src="js/aerogear.custom.js"></script>
